--- a/src/components/AnimeListItem/AnimeListItem.css
+++ b/src/components/AnimeListItem/AnimeListItem.css
@@ -3,6 +3,11 @@
   padding: 11px 11px;
   position: relative;
   max-width: 600px;
+  transition: box-shadow 0.3s linear;
+}
+
+.card__info-container:hover {
+  box-shadow: 0 0 20px #e28e11;
 }
 
 .card__name {
@@ -27,11 +32,22 @@
   min-height: 40px;
 }
 
-.card__image {
+.card__character-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.card__character-wrapper:hover .card__character-image {
+  transform: scale(1.1);
+}
+
+.card__character-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
+  transition: transform 1s ease-in-out;
 }
 
 .card__buttons-container {
