--- a/src/components/AnimeListItem/AnimeListItem.css
+++ b/src/components/AnimeListItem/AnimeListItem.css
@@ -35,11 +35,35 @@
 .card__character-wrapper {
   width: 100%;
   height: 100%;
+  position: relative;
   overflow: hidden;
 }
 
 .card__character-wrapper:hover .card__character-image {
   transform: scale(1.1);
+}
+
+.card__character-wrapper:hover .card__character-title {
+  opacity: 1;
+  transition: opacity 0.3s ease 1s;
+}
+
+.card__character-title {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  margin: 0;
+  width: 90%;
+  height: 90%;
+  color: bisque;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
+  background-color: rgb(0, 0, 0, .6);
+  overflow: auto;
+  opacity: 0;
+  z-index: 1;
 }
 
 .card__character-image {
